# wgu-takehome-assesment

./: .gitattributes  .gitignore  README.md  project.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/jobs/: inference.yml  training.yml
notebooks/inference/: inference_notebook.py
notebooks/train/: training_notebook.py
src/dbcli/: cli.py  jobs.py
utilities_bash_scripts/: validate_databricks_token.sh  validate_user.sh
